-bug#0001125: XML parse error on template import with degree symbol
-bug#0001147: Cactid doesn't trim white space from data template OIDs
-bug#0001159: Template names are confusing/archaic (Graph, Data Templates, Data Queries are renamed).
-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
-bug#0001182: Subdirectories are not secure and allow browsing
-bug#0001209: Content-type incorrect for the SVG graphs (Graph Management still does not display SVG, but rest does)
-bug#0001279: php warning when installing specific plugins (if no "keys" were defined for a plugin table)
-bug#0001306: Empty COMMENT + <HR> gives you a blank legend line (was: Add Blank Line to Graph via Pull down menu)
-bug#0001311: Access denied for graph-only users when accessing index.php
-bug#0001319: when adding a host using cli add_device that already exist in the database, both descriptions are updated
-bug#0001335: <oid_index_parse> does not work as expected; requires changes to XML for e.g. EMC Cellera
-bug#0001349: Graphs with Multiple Data Template Items don't show all required non-templated fields
-bug#0001354: 0.8.7c to 0.8.8 update script bugs
-bug#0001359: Better error checking in rrd.php
-bug#0001366: Exported data templates do not import the special characters properly
-bug#0001397: Never use "Delete" as default action in any drop-list in cacti to avoid disaster
-bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"
-bug#0001416: Graph Export fails with EXPORT FATAL ERROR: Export path /some/path/root/export is within a system path /root. Can not continue. 
-bug#0001428: segfault when database tables not present
-bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
-bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
-bug#0001444: ss_host_disk.php may return 0 instead of U when a host is not reachable